--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <!----------------------------------------------------------->
       <!--FormPage-->
 
-      <div id="FORM">
+      <form id="FORM">
         <div id="formcontainer">
           <h1 id="title">Login</h1>
           <h2 id="subtitle">Rocket League Trader</h2>
@@ -67,7 +67,7 @@
             </button>
           </div>
         </div>
-      </div>
+      </form>
 
       <div id="MENU">
         <div id="menuNav" class="sidepanel">
