--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
     <script src="src/js-render.js"></script>
     <script src="src/js-index.js"></script>
 
-    <div id="App">
-      <!--App-->
-      <!----------------------------------------------------------->
+<!----------------------------------------------------------->
+      
       <!--FormPage-->
 
-      <form id="FORM">
+      <div id="FORM">
         <div id="formcontainer">
           <h1 id="title">Login</h1>
           <h2 id="subtitle">Rocket League Trader</h2>
@@ -67,7 +66,7 @@
             </button>
           </div>
         </div>
-      </form>
+      </div>
 
       <div id="MENU">
         <div id="menuNav" class="sidepanel">
