--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               placeholder="username"
               id="username"
             />
-            <label class="form__label">Username</label>
+            <label id="Ulabel" class="form__label">Username</label>
           </div>
 
           <div id="EmailInput" class="form__group field">
@@ -41,7 +41,7 @@
               placeholder="email"
               id="email"
             />
-            <label class="form__label">Email Adress</label>
+            <label id="Elabel" class="form__label">Email Adress</label>
           </div>
 
           <div id="PasswordInput" class="form__group field">
@@ -51,7 +51,7 @@
               placeholder="password"
               id="password"
             />
-            <label class="form__label">Password</label>
+            <label id="Plabel" class="form__label">Password</label>
           </div>
 
           <div id="btncontainer">
